syntax = "proto3";
package mandechain.voting;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "mande-chain/x/voting/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateVote(MsgCreateVote) returns (MsgCreateVoteResponse);
  rpc UpdateCredibility(MsgUpdateCredibility) returns (MsgUpdateCredibilityResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateVote {
  string creator = 1;
  string receiver = 2;
  int64 count = 3;
  uint64 mode = 4;
}

message MsgCreateVoteResponse {
}

message MsgUpdateCredibility {
  string creator = 1;
  string address = 2;
}

message MsgUpdateCredibilityResponse {
}

// this line is used by starport scaffolding # proto/tx/message
